syntax = "proto3";
import "google/protobuf/empty.proto";

option csharp_namespace = "CareerCloud.gRPC.Protos";
package CareerCloud.gRPC;

service SystemLanguageCode{
    rpc GetSystemLanguageCode(SysLangIdRequest) returns (SysLangCodeProto);
    rpc GetAllSystemLanguageCode(google.protobuf.Empty) returns(SysLangCodeArray);
    rpc UpdateSystemLanguageCode(SysLangCodeArray) returns (google.protobuf.Empty);
    rpc CreateSystemKLanguageCode(SysLangCodeArray) returns (google.protobuf.Empty);
    rpc DeleteSystemLanguageCode(SysLangCodeArray) returns (google.protobuf.Empty);
}

message SysLangIdRequest{
    string LangId = 1;
}
message SysLangCodeProto{
    string LangId = 1;
    string Name = 2;
    string NativeName = 3;
}
message SysLangCodeArray{
    repeated SysLangCodeProto SysLangCode = 1;
}